@startuml KnowledgeGraph
!define RECTANGLE class

class Note {
    +Guid Id
    +string Title
    +string Content
    +NoteType Type
}

class Link {
    +Guid SourceId
    +Guid TargetId
    +LinkStrength Strength
}

class Tag {
    +string Name
    +int NoteCount
}

class Folder {
    +Guid Id
    +string Name
    +Guid? ParentId
}

Note "*" --> "*" Note : linked to
Note "*" --> "*" Tag : tagged with
Note "*" --> "1" Folder : organized in
Link "1" --> "2" Note : connects

@enduml
